test/resources/parser/passing/Precedence2.scala
object P2 {
    1 + 2 * 3 % 4 - 5 < 0 == true && false || true
}