test/resources/parser/failing/MatchOperand1.scala
object M {
    1 match { case 1 => true } || false
}